--- a/RTCPilot/RTCPilot.vcxproj.filters
+++ b/RTCPilot/RTCPilot.vcxproj.filters
@@ -583,5 +583,8 @@
     <None Include="config1.yaml">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="..\.gitignore">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
 </Project>
